# assessment-agent

./: ApplicationFlow.md  README.md  codebase_structure.md  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py  assessment_routes.py  eligibility_routes.py  evaluation_routes.py  orchestration_routes.py  question_generation_routes.py  result_routes.py
app/assessment_management/: __init__.py  helper.py  models.py  schemas.py  service.py
app/config/: __init__.py  auth.py  database.py  external_db_connector.py  settings.py
app/constants/: __init__.py  assessment_constants.py  error_codes.py
app/eligibility/: __init__.py  helper.py  models.py  schemas.py  service.py
app/evaluation/: __init__.py  helper.py  models.py  schemas.py  service.py  team3_webhook.py
app/question_generation/: __init__.py  helper.py  llm_client.py  models.py  schemas.py  service.py
app/result_management/: __init__.py  helper.py  schemas.py  service.py
app/utils/: __init__.py  create_tables.py  datetime_utils.py  id_generator.py  log_handler.py  time_logger_utils.py
backend/: .gitignore  CHANGES_SUMMARY.md  GITHUB_SETUP.md  PROJECT_SUMMARY.md  SETUP_GUIDE.md  init_db.py  pyproject.toml  setup.sh  start_server.sh
backend/app/: main.py
backend/app/api/v1/: __init__.py  __init__.py 20-09-52-944.py  employees.py  quizzes.py
backend/app/core/: __init__.py 20-09-52-950.py  config.py  dependencies.py
backend/app/db/: __init__.py 20-09-52-949.py  base.py  database.py
backend/app/models/: __init__.py 20-09-52-952.py  attempt.py  employee.py  quiz.py
backend/app/schemas/: __init__.py 20-09-52-954.py  attempt.py 20-09-52-954.py  employee.py  pagination.py  quiz.py 20-09-52-957.py
backend/app/tests/: __init__.py 20-09-52-957.py  conftest.py  test_api.py
